--- a/less/style.less
+++ b/less/style.less
@@ -326,11 +326,14 @@ h1 {
 }
 
 #about-section {
-  background-image: url(/img/background3.png);
+  // background-color: #303030;
+  background-image: url('../img/background3.png');
 }
 
 #services-section {
-  visibility: hidden;
+  // visibility: hidden;
+  background-color: #242424;
+
 }
 
 #works-section {
@@ -371,4 +374,10 @@ input {
 
 .project-p {
   color:#212121;
+}
+
+@media(max-width: 854px) {
+  h1 {
+    font-size: 40px;
+  }
 }
